# secure-coding

./: .dockerignore  .env.example  .gitignore  CHECKLIST.md  Dockerfile  REPORT.md  SECURITY_CHECKLIST.md  app.py  compose.yaml  pyproject.toml  readme.md
marketplace/: __init__.py  admin.py  auth.py  chat.py  config.py  extensions.py  models.py  products.py  reports.py  security.py  services.py  users.py
static/css/: style.css
static/js/: chat.js  confirm-dialog.js  navigation.js  nickname-edit.js  scroll-toggle.js
templates/: base.html  dashboard.html  error.html  index.html
templates/admin/: _nav.html  _pagination.html  _search.html  audit_logs.html  comments.html  conversations.html  dashboard.html  messages.html  products.html  purchases.html  reports.html  transactions.html  users.html
templates/auth/: login.html  profile.html  register.html
templates/chat/: detail.html  list.html
templates/components/: data_table.html  page_header.html  product_card.html
templates/partials/: confirm_dialog.html  topbar.html
templates/products/: detail.html  form.html  list.html  mine.html
templates/reports/: form.html  list.html
templates/users/: detail.html  search.html  transactions.html
tests/: __init__.py  conftest.py  test_admin_management.py  test_auth_security.py  test_extended_controls.py  test_identity_migration.py  test_products_transactions.py  test_reports_chat.py  test_runtime_config.py  test_template_reuse.py
