[project]
name = "file-market"
version = "1.0.0"
description = "Flask 기반 중고거래 플랫폼 파일마켓"
requires-python = ">=3.12,<3.13"
dependencies = [
  "Flask==3.1.3",
  "Flask-Limiter==4.1.1",
  "Flask-Login==0.6.3",
  "Flask-SocketIO==5.6.1",
  "Flask-SQLAlchemy==3.1.1",
  "Flask-WTF==1.2.2",
  "Pillow==12.3.0",
  "argon2-cffi==25.1.0",
  "gunicorn==26.0.0",
  "python-dotenv==1.2.2",
  "simple-websocket==1.1.0",
]

[dependency-groups]
dev = [
  "bandit==1.9.4",
  "pip-audit==2.10.0",
  "pytest==9.0.3",
  "pytest-cov==7.0.0",
  "ruff==0.15.5",
]

[tool.uv]
package = false
